Fix misaligned toggle list view button on iOS

--- a/src/modules/unit/components/_unit-browser.scss
+++ b/src/modules/unit/components/_unit-browser.scss
@@ -46,8 +46,11 @@
       background: $ui-content;
       color: $ui-text;
       border: 0;
-      font-size: 24px;
       line-height: 24px;
+
+      & > .unit-browser__toggle {
+        font-size: 24px;
+      }
     }
   }
 }
